# abootcrafter

./: Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
src/: cli.rs  errors.rs  main.rs  types.rs  utils.rs
src/commands/: create.rs  extract.rs  info.rs  mod.rs  update.rs
src/commands/bootimg/: create.rs  extract.rs  info.rs  mod.rs  update.rs
src/headers/: android.rs  fields.rs  mod.rs
tests/: index.csv
