[package]
name = "abootcrafter"
version = "0.2.0"
edition = "2021"
description = "A tool designed to manipulate android boot images like a real blacksmith."
license = "MIT"
repository = "https://github.com/andrewgigena/abootcrafter"
documentation = "https://docs.rs/abootcrafter"
homepage = "https://github.com/andrewgigena/abootcrafter"
authors = ["Andrew Gigena <mail@andrewgigena.dev>"]

[dependencies]
clap = { version = "4.4", features = ["derive"] }
thiserror = "2.0.9"
byteorder = "1.5.0"
binrw = "0.14.1"

[profile.release]
strip = true
opt-level = "z"
lto = true
